# pycolmap

./: CMakeLists.txt  pyproject.toml  setup.py
pycolmap/: main.cc
reconstruction/: point3D.cc
